# Create-Schematics

./: .env.sample  .gitignore  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  mprocs.yaml  package-lock.json  package.json  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.md
backend/: Cargo.toml  openapi.json  openapi.yaml
backend/benches/: file_optimisation.rs
backend/migrations/: 20231111113429_setup.sql  20231111114127_init.sql  20231123191608_versions.sql  20231129125501_tags.sql  20240122203346_users.sql  20240122203358_notifications.sql  20240122203424_versions.sql  20240122203431_schematics.sql  20240122203436_mods.sql  20240122203454_comments.sql  20240122203510_tags.sql  20240122203518_collections.sql
backend/src/: cli.rs  error.rs  lib.rs  main.rs  redirect.rs  response.rs
backend/src/api/: mod.rs  openapi.rs
backend/src/api/auth/: discord.rs  github.rs  google.rs  microsoft.rs  mod.rs  modrinth.rs
backend/src/api/v1/: collections.rs  comments.rs  favorites.rs  files.rs  images.rs  likes.rs  mod.rs  moderation.rs  mods.rs  notifications.rs  profile.rs  schematics.rs  tags.rs  users.rs
backend/src/authentication/: mod.rs  oauth.rs  password.rs  schemes.rs  session.rs
backend/src/cli/: mod.rs  server.rs
backend/src/database/: postgres.rs  redis.rs
backend/src/helpers/: cookies.rs  mod.rs
backend/src/middleware/: extractors.rs  files.rs  logging.rs  mod.rs  validators.rs
backend/src/models/: comment.rs  mod.rs  schematic.rs  user.rs
backend/src/response/: mod.rs
backend/src/storage/: compression.rs  mod.rs  schematics.rs  upload.rs
frontend/: package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js
frontend/src/: app.css  app.html
frontend/src/lib/: CollectionCard.svelte  SchematicCard.svelte  Slider.svelte  index.ts  openapiSchema.d.ts  requests.ts  schematics.ts  types.ts  utils.ts
frontend/src/lib/components/: Slider.svelte  SortAndFilter.svelte
frontend/src/lib/components/assets/: Arm.svelte  Banner.svelte  Cube.svelte  Table.svelte
frontend/src/lib/components/collections/: CollectionCard.svelte
frontend/src/lib/components/icons/: discord.svelte  github.svelte  moon.svelte  outlink.svelte  report.svelte  sun.svelte  sunrise.svelte  upload.svelte
frontend/src/lib/components/layout/: Footer.svelte  Header.svelte  InView.svelte
frontend/src/lib/components/schematics/: SchematicCard.svelte
frontend/src/lib/icons/: discord.svelte  download.svelte  github.svelte  google.svelte  microsoft.svelte  moon.svelte  sun.svelte
frontend/src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte
frontend/src/routes/account/: +page.svelte
frontend/src/routes/api/docs/: +page.svelte
frontend/src/routes/auth/: +page.svelte
frontend/src/routes/auth/register/: +page.svelte
frontend/src/routes/auth/reset-password/: +page.svelte  +page.svelte.decommissioned
frontend/src/routes/auth/sign-in/: +page.svelte
frontend/src/routes/auth/signin/: +page.svelte
frontend/src/routes/browse/: +page.svelte  +page.ts
frontend/src/routes/favorites/: +page.svelte
frontend/src/routes/schematic/[id]/: +page.svelte  +page.ts
frontend/src/routes/schematics/: +page.ts
frontend/src/routes/schematics/[id]/: +page.svelte
frontend/src/routes/upload/: +page.svelte
frontend/src/routes/user/[username]/: +page.svelte  +page.ts
frontend/src/routes/user/[username]/collection/[id]/: +page.svelte
frontend/src/routes/user_old/[username]/: +page.svelte
frontend/src/routes/user_old/[username]/collection/[id]/: +page.svelte
frontend/src/routes/userii/[username]/: +page.svelte
frontend/src/routes/userii/[username]/collection/[id]/: +page.svelte
frontend/static/api/: docs.html  swagger_custom.css
frontend/tests/: test.test.ts
scripts/: fixtures.py  requirements.txt
src/: Auth.ts  animations.css  app.html  globals.css
src/components/: Footer.svelte  Header.svelte  Home.svelte  Macintosh.svelte  MobileDevice.svelte  SchematicDisplay.svelte  Scrolly.svelte  Tags.svelte
src/data/: data.ts  footer_data.ts  home_page_text.ts  links.ts
src/lib/: env.ts  homeScene.ts  scene.ts  types.ts
src/routes/: +layout.svelte  +page.svelte  +page.ts
src/routes/home/: +page.ts
src/routes/login/: +page.svelte
src/stores/: colours.ts  sceneStore.ts
static/fonts/: MinecraftRegular.json
static/models/: schematic_table.gltf  train.glb
