[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.20", features = ["tracing", "headers", "macros"] }
axum-extra = { version = "0.8.0", features = ["typed-routing"] }

tower = "0.4.13"
tower-http = { version = "0.4.3", features = ["trace", "cors", "auth", "add-extension", "util"] } 
tower-cookies = { version = "0.9.0", features = ["private", "signed"]} 

tokio = { version = "1.34.0", features = ["full"] }

utoipa = { version = "4.0.0", features = ["axum_extras", "yaml", "uuid"] }
utoipa-swagger-ui = { version = "4.0.0", features = ["axum"] }

tracing = "0.1.40"
tracing-subscriber = "0.3.17"

serde = "1.0.193"
serde_derive = "1.0.193"
serde_json = "1.0.108"

clap = { version = "4.4.8", features = ["derive", "env"] }

sqlx = { version = "0.7.2", features = ["runtime-tokio", "macros", "migrate", "time", "uuid", "postgres"] }
redis = { version = "0.23.3", features = ["tokio-comp", "connection-manager"] }
deadpool-redis = { version = "0.13.0", features = ["rt_tokio_1", "serde" ] }

thiserror = "1.0.50"
anyhow = "1.0.48"

dotenv = "0.15.0"
uuid = { version = "1.5.0", features = ["serde"] }
time = "0.3.23"
argon2 = "0.5.2"
rand = "0.8.5"
nanoid = "0.4.0"
bitflags = { version = "2.4.1", features = ["serde"] }

[dev-dependencies]
axum-test = "13.4.1"