[package]
name = "backend"
version = "0.1.0"
authors = ["Rabbitminers <rabbitminers2.0@gmail.com>"]
edition = "2021"

[features]
default = ["github-oauth", "microsoft-oauth", "google-oauth", "discord-oauth"]
github-oauth = []
microsoft-oauth = []
google-oauth = []
discord-oauth = []

[dependencies]
poem = { version = "1.3.59", features = ["cookie", "multipart"] }
poem-openapi = { version = "3.0.6", features = ["swagger-ui", "time", "uuid", "static-files"] }
poem-openapi-derive = "3.0.6"

tokio = { version = "1.34.0", features = ["full"] }

tracing = "0.1.40"
tracing-subscriber = "0.3.17"

serde = "1.0.193"
serde_derive = "1.0.193"
serde_json = "1.0.108"

clap = { version = "4.4.8", features = ["derive", "env"] }

sqlx = { version = "0.7.2", features = ["runtime-tokio", "macros", "migrate", "time", "uuid", "postgres"] }
redis = { version = "0.24.0", features = ["tokio-comp", "connection-manager"] }

thiserror = "1.0.50"
anyhow = "1.0.48"

validator = { version = "0.16.0", features = ["derive"] }
dotenv = "0.15.0"
uuid = { version = "1.5.0", features = ["serde", "v4"] }
time = "0.3.23"
rand = "0.8.5"
nanoid = "0.4.0"
oauth2 = "4.4.2"
reqwest = { version = "0.11.22", features = ["json"] }
sanitize-filename = "0.5.0"
tempfile = "3.8.1"
image = "0.24.7"
webp = "0.2.6"
rustrict = "0.7.19"
strum = { version = "0.25.0", features = ["derive"] }

zune-inflate = { version = "0.2.54", default-features = false, features = ["gzip"] }
zopfli = "0.8.0"
libdeflater = "1.19.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "file_optimisation"
harness = false
